<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="clear"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/totalAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/total_amount"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/taxAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalAmountText"
        android:layout_alignStart="@+id/totalAmountText"
        android:layout_marginTop="15dp"
        android:text="@string/tax_amount"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/totalAmountText"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/totalAmountText"
        android:ems="10"
        android:hint="@string/total_amount_hint"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/taxAmount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/taxAmountText"
        android:layout_alignStart="@+id/totalAmount"
        android:ems="10"
        android:hint="@string/tax_amount_hint"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tipPercentageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxAmountText"
        android:layout_alignStart="@+id/totalAmountText"
        android:layout_marginTop="15dp"
        android:text="@string/tip_percentage"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/taxAmount"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tipPercentageText"


        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/zeroPercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_percent_text" />

        <RadioButton
            android:id="@+id/fivePercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_percent_text" />

        <RadioButton
            android:id="@+id/tenPercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ten_percent_text" />

        <RadioButton
            android:id="@+id/twentyPercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twenty_percent_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/tipAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipPercentageText"
        android:layout_alignStart="@+id/totalAmountText"
        android:layout_marginTop="15dp"
        android:text="@string/tip_amount_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipPercentageText"
        android:layout_alignTop="@+id/tipAmountText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/zero"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/grandTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipAmountText"
        android:layout_alignStart="@+id/totalAmountText"
        android:layout_marginTop="15dp"
        android:text="@string/grand_total_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipPercentageText"
        android:layout_alignTop="@+id/grandTotalText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/zero"
        android:textSize="25sp" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grandTotalText"
        android:layout_alignStart="@+id/totalAmountText"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"

        android:layout_toStartOf="@id/calculateButton"
        android:onClick="clear"
        android:text="@string/clear_text" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/clearButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:onClick="calculate"
        android:text="@string/calculate_text" />


</RelativeLayout>